testdata/baselines/reference/submodule/conformance/varRequireFromJavascript.errors.txt
ex.js(2,17): error TS8010: Type annotations can only be used in TypeScript files.
use.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.


==== use.js (1 errors) ====
    var ex = require('./ex')
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Crunch} wrap
               ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(wrap) {
        wrap.n
    }
    
==== ex.js (1 errors) ====
    export class Crunch {
        /** @param {number} n */
                    ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        constructor(n) {
            this.n = n
        }
        m() {
            return this.n
        }
    }
    